# StellarNova

./: .gitignore  ARCHITECTURE.md  README.md  SECURITY.md
ai/: README.md  deepseek.ts  index.ts  parsePrompt.ts  schema.ts  test-deepseek.ts
backend/: .env.example  LIMIT_ORDER_EXECUTOR.md  README.md  package-lock.json  package.json
backend/src/: config.ts  (+2 more)
contracts/stellarnova-sc/: .gitignore  Cargo.toml  README.md  build.sh  cancel-all-orders-mainnet.sh  check-balance-mainnet.sh  deploy-devnet.sh  deploy-mainnet.sh  deploy-output.json  deploy.sh  deployed-contract-devnet.txt  deployed-contract-mainnet-FINAL-v2.txt  deployed-contract-mainnet-FINAL.txt  deposit-test-tokens.sh  deposit-usdc-mainnet.sh  devnet.config.sh  get-contract-addr.py  mainnet.config.sh  multiversx.json  query-pending-orders.sh  query.sh  set-executor-devnet.sh  set-executor-mainnet.sh  set-xexchange-pair-devnet.sh  set-xexchange-pair-mainnet.sh  test-create-limit-order-devnet.sh  test-deposit-devnet.sh  test-instant-limit-order.sh  test-limit-order-mainnet.sh  test-limit-order.sh  test-query-order-devnet.sh  test-upgraded-contract.sh  upgrade-mainnet.sh  upgrade-swap-mainnet.sh  upgrade.sh
contracts/stellarnova-sc/meta/: Cargo.toml
contracts/stellarnova-sc/meta/src/: main.rs
contracts/stellarnova-sc/src/: dex.rs  errors.rs  events.rs  lib.rs  lib.rs.bak  limit_orders.rs  storage.rs
contracts/stellarnova-sc/wasm/: Cargo.toml
contracts/stellarnova-sc/wasm/src/: lib.rs
frontend/: .env.example  README.md  RESTART_SERVER.sh  index.html  package-lock.json  package.json  vite.config.ts
(+42 files in other folders)
